@@ -1,27 +1,0 @@
-%copyright%
-
-
-#include "%filethinname%.h"
-// #include <standard C library headers>
-
-// #include <standard C++ library headers>
-
-// #include <other library headers>
-
-// #include "custom headers"
-
-
-/**
- * constructor
- */
-%ClassName%::%ClassName%()
-{
-}
-
-
-/**
- * destructor
- */
-%ClassName%::~%ClassName%()
-{
-}
