@@ -1,24 +1,0 @@
-/* -*- mode: ObjC; -*- */
-%copyright%
-
-
-// #import <standard C library headers>
-
-// #import <standard ObjectiveC library headers>
-#import <Cocoa/Cocoa.h>
-
-// #import <other library headers>
-
-// #import "custom headers"
-
-
-/**
- * %ClassName% class
- */
-@interface %ClassName% : NSObject {
-}
-
-- (id)init;
-- (void)dealloc;
-
-@end
