@@ -1,29 +1,0 @@
-#!/usr/bin/env python
-# -*- coding: utf-8 -*-
-%copyright%
-
-"""%classname% module"""
-
-
-# import standard library module
-
-# import other library module
-
-# import custom module
-
-
-class %ClassName%(object):
-    """%ClassName% class"""
-
-    def __init__(self):
-        """constructor"""
-        pass
-
-
-def test():
-    """unittest function"""
-    pass
-
-
-if __name__ == "__main__":
-    test()
