@@ -1,16 +1,16 @@
 /**
- * Copyright (C) %year% %authorname%
+ * Copyright (C) (>>>YEAR<<<) (>>>USER_NAME<<<)
  *
  * This code has been released into the Public Domain.
  * You may do whatever you like with it.
  *
  * @file
- * @author %authorname% <%email%>
- * @date %date%
+ * @author (>>>USER_NAME<<<) <(>>>AUTHOR<<<)>
+ * @date (>>>ISO_DATE<<<)
  */
 
 
-#include "%filethinname%.h"
+#include "(>>>FILE_SANS<<<).h"
 // #include <standard C library headers>
 
 // #include <standard C++ library headers>
@@ -23,7 +23,7 @@
 /**
  * constructor
  */
-%ClassName%::%ClassName%()
+(>>>FILE_UPCASE_INIT<<<)::(>>>FILE_UPCASE_INIT<<<)()
 {
 }
 
@@ -31,6 +31,6 @@
 /**
  * destructor
  */
-%ClassName%::~%ClassName%()
+(>>>FILE_UPCASE_INIT<<<)::~(>>>FILE_UPCASE_INIT<<<)()
 {
 }
