@@ -1,0 +1,49 @@
+/* -*- mode: C++; -*- */
+/**
+ * Copyright (C) (>>>YEAR<<<) (>>>USER_NAME<<<)
+ *
+ * This code has been released into the Public Domain.
+ * You may do whatever you like with it.
+ *
+ * @file
+ * @author (>>>USER_NAME<<<) <(>>>AUTHOR<<<)>
+ * @date (>>>ISO_DATE<<<)
+ */
+
+
+#ifndef (>>>FILE_UPCASE<<<)_(>>>FILE_EXT_UPCASE<<<)_
+#define (>>>FILE_UPCASE<<<)_(>>>FILE_EXT_UPCASE<<<)_
+
+
+// #include <standard C library headers>
+
+// #include <standard C++ library headers>
+
+// #include <other library headers>
+
+// #include "custom headers"
+
+
+/**
+ * (>>>FILE_UPCASE_INIT<<<) class
+ */
+class (>>>FILE_UPCASE_INIT<<<)
+{
+public:
+    (>>>FILE_UPCASE_INIT<<<)();
+    /*virtual*/ ~(>>>FILE_UPCASE_INIT<<<)();
+
+private:
+    (>>>FILE_UPCASE_INIT<<<)(const (>>>FILE_UPCASE_INIT<<<)& rhs);
+    (>>>FILE_UPCASE_INIT<<<)& operator=(const (>>>FILE_UPCASE_INIT<<<)& rhs);
+
+public:
+
+protected:
+
+private:
+
+};
+
+
+#endif // (>>>FILE_UPCASE<<<)_(>>>FILE_EXT_UPCASE<<<)_
