@@ -1,0 +1,30 @@
+/**
+ * Copyright (C) (>>>YEAR<<<) (>>>USER_NAME<<<)
+ *
+ * This code has been released into the Public Domain.
+ * You may do whatever you like with it.
+ *
+ * @file
+ * @author (>>>USER_NAME<<<) <(>>>AUTHOR<<<)>
+ * @date (>>>ISO_DATE<<<)
+ */
+
+
+// package
+
+// import standard library class
+
+// import other library class
+
+// import custom class
+
+
+/**
+ * (>>>FILE_UPCASE_INIT<<<) class
+ */
+public class (>>>FILE_UPCASE_INIT<<<) extends java.lang.Object {
+    public static void main(String[] args) {
+
+    }
+
+}
