@@ -1,0 +1,37 @@
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+##
+# Copyright (C) (>>>YEAR<<<) (>>>USER_NAME<<<)
+#
+# This code has been released into the Public Domain.
+# You may do whatever you like with it.
+#
+# @file
+# @author (>>>USER_NAME<<<) <(>>>AUTHOR<<<)>
+# @date (>>>ISO_DATE<<<)
+
+"""(>>>FILE_SANS<<<) module"""
+
+
+# import standard library module
+
+# import other library module
+
+# import custom module
+
+
+class (>>>FILE_UPCASE_INIT<<<)(object):
+    """(>>>FILE_UPCASE_INIT<<<) class"""
+
+    def __init__(self):
+        """constructor"""
+        pass
+
+
+def test():
+    """unittest function"""
+    pass
+
+
+if __name__ == "__main__":
+    test()
