@@ -1,3 +1,7 @@
+2011-06-16  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (auto-insert-expand): autoinsert.
+
 2011-06-15  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (write-file-hooks): time-stamp.
